# np

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  README.md  RELEASE_NOTES.md  _agg_8hpp_source.html  _all_to_number_convertor_8hpp_source.html  _array_8hpp_source.html  _axis_8hpp_source.html  _comp_8hpp_source.html  _const_index_8hpp_source.html  _const_index_impl_8hpp_source.html  _constants_8hpp_source.html  _copy_8hpp_source.html  _creators_8hpp_source.html  _d_type_8hpp_source.html  _exception_8hpp_source.html  _index_8hpp_source.html  _index_impl_8hpp_source.html  _indexing_8hpp_source.html  _inspect_8hpp_source.html  _io_8hpp_source.html  _manip_8hpp_source.html  _math_8hpp_source.html  _n_d_array_base_8hpp_source.html  _n_d_array_base_impl_8hpp_source.html  _n_d_array_base_stream_io_impl_8hpp_source.html  _n_d_array_dynamic_8hpp_source.html  _n_d_array_dynamic_agg_impl_8hpp_source.html  _n_d_array_dynamic_comp_impl_8hpp_source.html  _n_d_array_dynamic_copy_impl_8hpp_source.html  _n_d_array_dynamic_creators_impl_8hpp_source.html  _n_d_array_dynamic_decl_8hpp_source.html  _n_d_array_dynamic_index_impl_8hpp_source.html  _n_d_array_dynamic_inspect_impl_8hpp_source.html  _n_d_array_dynamic_internal_8hpp_source.html  (+221 more)
doc/: CMakeLists.txt  Doxyfile.in
include/np/: Agg.hpp  Array.hpp  Axis.hpp  Comp.hpp  Constants.hpp  Copy.hpp  Creators.hpp  DType.hpp  Exception.hpp  Index.hpp  Inspect.hpp  Io.hpp  Manip.hpp  Math.hpp  Shape.hpp  Sort.hpp
include/np/internal/: Tools.hpp
include/np/internal/cuda/: Add.cuh  Add.hpp  Divide.cuh  Divide.hpp  Multiply.cuh  Multiply.hpp  Subtract.cuh  Subtract.hpp  Tikhonov.cuh  Tikhonov.hpp  Tools.cuh
include/np/linalg/: Inv.hpp  LstSq.hpp
include/np/ndarray/constant/: NDArrayConstant.hpp
include/np/ndarray/constant/internal/: NDArrayConstantStorage.hpp  NDArrayConstantStorageStreamIo.hpp  NDArrayConstantStorageStreamIoImpl.hpp
include/np/ndarray/diagonal/: NDArrayDiagonal.hpp  NDArrayIdentity.hpp
include/np/ndarray/diagonal/internal/: NDArrayDiagonalStorage.hpp  NDArrayDiagonalStorageStreamIo.hpp  NDArrayDiagonalStorageStreamIoImpl.hpp  NDArrayIdentityStorage.hpp  NDArrayIdentityStorageStreamIo.hpp  NDArrayIdentityStorageStreamIoImpl.hpp
include/np/ndarray/dynamic/: NDArrayDynamic.hpp  NDArrayDynamicAggImpl.hpp  NDArrayDynamicCompImpl.hpp  NDArrayDynamicCopyImpl.hpp  NDArrayDynamicCreatorsImpl.hpp  NDArrayDynamicDecl.hpp  NDArrayDynamicIndexImpl.hpp  NDArrayDynamicInspectImpl.hpp  NDArrayDynamicIoImpl.hpp  NDArrayDynamicManipImpl.hpp  NDArrayDynamicMathImpl.hpp  NDArrayDynamicSortImpl.hpp  Tools.hpp
include/np/ndarray/dynamic/internal/: ConstSpan.hpp  NDArrayDynamicInternal.hpp  NDArrayDynamicInternalStreamIoImpl.hpp  NDArrayDynamicStorage.hpp  NDArrayDynamicStorageStreamIo.hpp  NDArrayDynamicStorageStreamIoImpl.hpp  Span.hpp  Tools.hpp  Using.hpp
include/np/ndarray/internal/: Agg.hpp  AllToNumberConvertor.hpp  ConstIndex.hpp  ConstIndexImpl.hpp  Index.hpp  IndexImpl.hpp  IndexStorage.hpp  Indexing.hpp  Math.hpp  NDArrayBase.hpp  NDArrayBaseImpl.hpp  NDArrayBaseStreamIoImpl.hpp  NDArrayIndex.hpp  NDArrayIndexStorage.hpp  NDArrayShaped.hpp  NDArrayShapedImpl.hpp  Nep1.hpp  OffsetType.hpp  Tools.hpp
include/np/ndarray/static/: NDArrayStatic.hpp  NDArrayStaticAggImpl.hpp  NDArrayStaticComp.hpp  NDArrayStaticCompImpl.hpp  NDArrayStaticCopyImpl.hpp  NDArrayStaticCreatorsImpl.hpp  NDArrayStaticDecl.hpp  NDArrayStaticIndexImpl.hpp  NDArrayStaticInspectImpl.hpp  NDArrayStaticIoImpl.hpp  NDArrayStaticManipImpl.hpp  NDArrayStaticMathImpl.hpp  NDArrayStaticSortImpl.hpp  Tools.hpp
include/np/ndarray/static/internal/: NDArrayStaticInternal.hpp  NDArrayStaticInternalStreamIoImpl.hpp  NDArrayStaticStorage.hpp  NDArrayStaticStorageStreamIo.hpp  NDArrayStaticStorageStreamIoImpl.hpp  Tools.hpp  Using.hpp
samples/data-generator/: CMakeLists.txt  main.cpp
samples/least-squares/: CMakeLists.txt  main.cpp
samples/monte-carlo/: CMakeLists.txt  main.cpp
scripts/: build.sh  deploy.sh
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+5 more)
src/cuda/: Add.cu  Divide.cu  LstSqTikhonov.cu  Multiply.cu  Subtract.cu
unit_tests/: CMakeLists.txt
unit_tests/include/: ArrayTest.hpp
unit_tests/src/: ArrayAggregationTest.cpp  ArrayComparisonTest.cpp  ArrayCopyTest.cpp  ArrayCreatorsTest.cpp  ArrayIndexTest.cpp  ArrayInspectTest.cpp  ArrayIoTest.cpp  ArrayManip2DTest.cpp  ArrayManip3DTest.cpp  ArrayManipTest.cpp  ArrayMath2DTest.cpp  ArrayMath3DTest.cpp  ArrayMathTest.cpp  ArrayOutputTest.cpp  LinalgInvTest.cpp  LinalgLstSqTest.cpp  LinalgTest.cpp  NDArrayDynamicInternalTest.cpp  NDArrayDynamicStorageTest.cpp  NDArrayStaticInternalTest.cpp  NDArrayStaticStorageTest.cpp  main.cpp
unit_tests/test_data/: 1D_float.csv  1D_float.npy  1D_int.csv  1D_int_msvc.npy  1D_string.npy  1D_unicode.npy  2D_float.csv  2D_float.npy  2D_int.csv  2D_int.npy  2D_int_msvc.npy  2D_string.npy  2D_unicode.npy  3D_float.npy  3D_int.npy  3D_int_msvc.npy  3D_string.npy  3D_unicode.npy  empty_int.npy  empty_string.npy  empty_unicode.npy
